--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
                     <h1>Bermuda Rental</h1>
                     <p>Sign in to enjoy our wonderful vehicle renting services</p>
                 </div>
-                <form action="{{ url_for('report') }}" method="POST">
+                <form action="{{ url_for('processing') }}" method="POST">
                     <label for="userName">Username</label>
                     <input type="text" name="userName" class="SPACE" placeholder="Username"><br>
                     <label for="passWord">Password</label>
